Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.VB


    Public Declare Function C13_BCConfig Lib "C13W32.DLL" Alias "_C13_BCConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCCreateList Lib "C13W32.DLL" Alias "_C13_BCCreateList@28" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCCreateMsg Lib "C13W32.DLL" Alias "_C13_BCCreateMsg@20" (ByVal configval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCSchedFrame Lib "C13W32.DLL" Alias "_C13_BCSchedFrame@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedMsg Lib "C13W32.DLL" Alias "_C13_BCSchedMsg@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedRetry Lib "C13W32.DLL" Alias "_C13_BCSchedRetry@12" (ByVal condition As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCTransmitMsg Lib "C13W32.DLL" Alias "_C13_BCTransmitMsg@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCTransmitMsgEx Lib "C13W32.DLL" Alias "_C13_BCTransmitMsgEx@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CardClose Lib "C13W32.DLL" Alias "_C13_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CardOpen Lib "C13W32.DLL" Alias "_C13_CardOpen@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Sub C13_CardReset Lib "C13W32.DLL" Alias "_C13_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function C13_CardStart Lib "C13W32.DLL" Alias "_C13_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CardStop Lib "C13W32.DLL" Alias "_C13_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ErrorCtrl Lib "C13W32.DLL" Alias "_C13_ErrorCtrl@8" (ByVal ctrlval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ErrorDefine Lib "C13W32.DLL" Alias "_C13_ErrorDefine@24" (ByVal defineval As UInt32, ByVal errvalue As UInt16, ByVal countval As Int32, ByVal wordpos As UInt16, ByVal bitpos As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ErrorSent Lib "C13W32.DLL" Alias "_C13_ErrorSent@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ErrorTagBC Lib "C13W32.DLL" Alias "_C13_ErrorTagBC@12" (ByVal tagval As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ErrorTagRT Lib "C13W32.DLL" Alias "_C13_ErrorTagRT@24" (ByVal tagval As Int32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListDataRd Lib "C13W32.DLL" Alias "_C13_ListDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListDataWr Lib "C13W32.DLL" Alias "_C13_ListDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonBlkRd Lib "C13W32.DLL" Alias "_C13_MonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MonBlkRdEx Lib "C13W32.DLL" Alias "_C13_MonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MonConfig Lib "C13W32.DLL" Alias "_C13_MonConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonFilterSA Lib "C13W32.DLL" Alias "_C13_MonFilterSA@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonFilterTA Lib "C13W32.DLL" Alias "_C13_MonFilterTA@8" (ByVal tamask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonIsRunning Lib "C13W32.DLL" Alias "_C13_MonIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonRd Lib "C13W32.DLL" Alias "_C13_MonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgDataRd Lib "C13W32.DLL" Alias "_C13_MsgDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C13_MsgDataWr Lib "C13W32.DLL" Alias "_C13_MsgDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgFieldRd Lib "C13W32.DLL" Alias "_C13_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgFieldWr Lib "C13W32.DLL" Alias "_C13_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_PlayConfig Lib "C13W32.DLL" Alias "_C13_PlayConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_PlayWr Lib "C13W32.DLL" Alias "_C13_PlayWr@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_RTConfig Lib "C13W32.DLL" Alias "_C13_RTConfig@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_RTCreateList Lib "C13W32.DLL" Alias "_C13_RTCreateList@32" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_RTCreateMsg Lib "C13W32.DLL" Alias "_C13_RTCreateMsg@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_RTGetMsg Lib "C13W32.DLL" Alias "_C13_RTGetMsg@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_RTSWDWr Lib "C13W32.DLL" Alias "_C13_RTSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ValPackCWD Lib "C13W32.DLL" Alias "_C13_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Sub C13_ValUnpackCWD Lib "C13W32.DLL" Alias "_C13_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
    Public Declare Function C13_AddrDSP Lib "C13W32.DLL" Alias "_C13_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function C13_AddrHost Lib "C13W32.DLL" Alias "_C13_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function C13_AsciiCat Lib "C13W32.DLL" Alias "_C13_AsciiCat@8" (ByRef strdest As String, ByRef strsrc As String) As UInt32
    Public Declare Function C13_AsciiCmpi Lib "C13W32.DLL" Alias "_C13_AsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function C13_AsciiCpy Lib "C13W32.DLL" Alias "_C13_AsciiCpy@8" (ByRef strdest As String, ByRef strsrc As String) As UInt32
    Public Declare Function C13_AsciiFromNibble Lib "C13W32.DLL" Alias "_C13_AsciiFromNibble@4" (ByVal ch As Char) As Int32
    Public Declare Function C13_AsciiFromVal Lib "C13W32.DLL" Alias "_C13_AsciiFromVal@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function C13_AsciiInc Lib "C13W32.DLL" Alias "_C13_AsciiInc@4" (ByRef asciistr As String) As UInt32
    Public Declare Function C13_AsciiIncc Lib "C13W32.DLL" Alias "_C13_AsciiIncc@4" (ByRef asciistr As String) As UInt32
    Public Declare Function C13_AsciiIsLower Lib "C13W32.DLL" Alias "_C13_AsciiIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function C13_AsciiIsRadix Lib "C13W32.DLL" Alias "_C13_AsciiIsRadix@8" (ByRef asciistr As String, ByVal radixval As Int32) As Int32
    Public Declare Function C13_AsciiLenVal Lib "C13W32.DLL" Alias "_C13_AsciiLenVal@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function C13_AsciiToUpper Lib "C13W32.DLL" Alias "_C13_AsciiToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Function C13_AsciiToVal Lib "C13W32.DLL" Alias "_C13_AsciiToVal@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Sub C13_AsciiTrimLead Lib "C13W32.DLL" Alias "_C13_AsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub C13_AsciiTrimTrail Lib "C13W32.DLL" Alias "_C13_AsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Sub C13_AsciiTrimZero Lib "C13W32.DLL" Alias "_C13_AsciiTrimZero@4" (ByRef buf As String)
    Public Declare Function C13_BCConfigEx Lib "C13W32.DLL" Alias "_C13_BCConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCConfigMsg Lib "C13W32.DLL" Alias "_C13_BCConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCCreateListEx Lib "C13W32.DLL" Alias "_C13_BCCreateListEx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCCreateListExx Lib "C13W32.DLL" Alias "_C13_BCCreateListExx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCGetMsg Lib "C13W32.DLL" Alias "_C13_BCGetMsg@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_BCSchedAgain Lib "C13W32.DLL" Alias "_C13_BCSchedAgain@8" (ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedBranch Lib "C13W32.DLL" Alias "_C13_BCSchedBranch@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedBranchDin0 Lib "C13W32.DLL" Alias "_C13_BCSchedBranchDin0@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedBranchDin1 Lib "C13W32.DLL" Alias "_C13_BCSchedBranchDin1@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedBranchEx Lib "C13W32.DLL" Alias "_C13_BCSchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedBuild Lib "C13W32.DLL" Alias "_C13_BCSchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedCall Lib "C13W32.DLL" Alias "_C13_BCSchedCall@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_BCSchedCallCond Lib "C13W32.DLL" Alias "_C13_BCSchedCallCond@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
